--- a/estiloTelaRegistro.css
+++ b/estiloTelaRegistro.css
@@ -29,15 +29,16 @@ body {
 
 input {
     width: 90%;
-    height: 20%;
+    height: 45%;
     margin-bottom: 8%;
+    background-color: #D9D9D9;
+    border: none;
+    border-radius: 10px;
 }
 
 .esquerda {
-    display: flex;
     flex-direction: column;
     width: 100%;
-    height: 45%;
 }
 
 label {
@@ -45,30 +46,59 @@ label {
 }
 
 .direita {
-    display: flex;
     flex-direction: column;
     width: 100%;
-    height: 45%;
 }
 
 .main {
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 85%;
+    width: 90%;
     gap: 14%;
-    height: 20%;
+    justify-content: space-between;
 }
 
 
 .observacoes {
-    display: flex;
-    width: 85%;
-
+    width: 82%;
     flex-direction: column;
-    margin-top: 20%;
+    margin-top: 35%;
 }
 
 #observacoes {
+    width: 100%; /* ou um valor específico tipo 200px */
     height: 100%;
+}
+
+button {
+    width: 70%; /* ou um valor específico tipo 200px */
+    height: 30%;
+    border: none;
+    cursor: pointer;
+    border-radius: 20px;
+    background-color: black;
+    color: white;
+    margin-top: 15%;
+}
+
+section {
+    width: 100%;
+    height: 50%;
+    align-items: center;
+    justify-content: center;
+}
+
+.h1 {
+    margin-top: 10%;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    height: 5%;
+}
+
+.classe_botao {
+    align-items: center;
+    justify-content: center;
 }
