--- a/EstiloTelaInicial.css
+++ b/EstiloTelaInicial.css
@@ -55,6 +55,8 @@ input {
     width: 100%;
     padding:7px;
     font-size: 0.7rem;
+    background-color: #D9D9D9;
+    border: none;
 }
 
 .inputs {
@@ -90,11 +92,16 @@ a {
     color: black;
 }
 
+label {
+    color: black;
+}
+
 
 /* Responsividade */
-@media (max-width: 600px) {
+
+@media (min-width: 150px) {
     .container {
-        width: 95%;
+        width: 50%;
         padding: 15px;
     }
 
@@ -108,6 +115,85 @@ a {
 
     img {
         width: 80%;
-        height: 80%;
+        height: 70%;
+    }
+    p {
+        font-size: 0.6rem;
+    }
+
+}
+
+/* 420 */
+
+@media (min-width: 420px) {
+    .container {
+        width: 32%;
+        padding: 15px;
+    }
+
+    h1 {
+        font-size: 1.5rem;
+    }
+
+    .botao_entrar {
+        width: 100%;
+    }
+
+    img {
+        width: 80%;
+        height: 60%;
+    }
+    p {
+        font-size: 0.7rem;
     }
 }
+
+/* 768 */
+
+@media (min-width: 768px) {
+    .container {
+        width: 25%;
+        padding: 15px;
+    }
+
+    h1 {
+        font-size: 1.5rem;
+    }
+
+    .botao_entrar {
+        width: 100%;
+    }
+
+    img {
+        width: 100%;
+        height: 70%;
+    }
+    p {
+        font-size: 1.0rem;
+    }
+}
+
+/* 1024 */
+
+@media (min-width: 1120px) {
+    .container {
+        width: 50%;
+        padding: 15px;
+    }
+
+    h1 {
+        font-size: 1.5rem;
+    }
+
+    .botao_entrar {
+        width: 100%;
+    }
+
+    img {
+        width: 60%;
+        height: 30%;
+    }
+}
+
+
+
