--- a/estiloTelaCadastro.css
+++ b/estiloTelaCadastro.css
@@ -9,7 +9,7 @@ body {
     background-color: black;
     color: #333;
     line-height: 1.6;
-    height: 100vh;
+    min-height: 100vh;
     justify-content: center;
     align-items: center;
     display: flex;
@@ -17,7 +17,7 @@ body {
 
 .container {
     display: flex;
-    width: 22%;
+    width: 30%;
     height: 87%;
     align-items: center;
     justify-content: center;
@@ -28,7 +28,7 @@ body {
 
 h1 {
     font-size: 1.0rem;
-    margin-bottom: 25%;
+    margin-top: 10%;
 }
 
 p {
@@ -37,7 +37,7 @@ p {
 }
 
 section {
-    width: 73%;
+    width: 90%;
 }
 
 input {
@@ -47,13 +47,14 @@ input {
 }
 
 button {
-    width: 70%;
+    width: 60%;
     border: none;
     background-color: black;
     color: #FFFFFF;
     border-radius: 35px;
     padding: 3%;
     cursor: pointer;
+    margin-bottom: 3%;
 }
 
 .classe_botao {
@@ -63,7 +64,7 @@ button {
 }
 
 .input_nome , .input_sobrenome {
-    width: 70%;
+    width: 90%;
     margin-bottom: 4%;
     padding: 3%;
 }
@@ -90,11 +91,17 @@ button {
 .input_data {
     padding: 3%;
     margin-bottom: 3%;
-    width: 53%;
+    width: 40%;
 }
 
 .label_data_de_nascimento {
     margin-bottom: 3%;
+}
+
+.bloco_data {
+    width: 90%;
+    display: flex;
+    flex-direction: column;
 }
 
 .os3input {
@@ -103,5 +110,117 @@ button {
 }
 
 .select_3input {
-    margin-bottom: 3%;
+    margin-bottom: 1%;
 }
+
+
+
+
+@media (max-width: 320px) {
+    .container {
+        width: 90%;
+        height: auto;
+        border-radius: 15px;
+    }
+
+    h1 {
+        font-size: 0.8rem;
+        margin-bottom: 3%;
+    }
+
+    .input_nome, .input_sobrenome {
+        width: 90%;
+        margin-bottom: 3%;
+    }
+
+    .input_nomeEsobrenome {
+        flex-direction: column;
+        gap: 10px;
+    }
+
+    .input_data, .input_email, .os3input {
+        width: 90%;
+    }
+
+    section {
+        width: 100%;
+        margin-bottom: 6%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+    }
+
+    button {
+        width: 70%;
+        padding: 12px;
+    }
+
+
+}
+
+
+
+
+
+
+@media (max-width: 768px) {
+    .container {
+        width: 35%;
+        height: 50%;
+        border-radius: 25px;
+    }
+
+    h1 {
+        font-size: 0.8rem;
+        margin-bottom: 3%;
+        margin-top: 5%;
+    }
+
+    .input_nome, .input_sobrenome {
+        width: 90%;
+        margin-bottom: 1%;
+    }
+
+    .input_nomeEsobrenome {
+        flex-direction: column;
+        gap: 10px;
+    }
+
+    .input_data, .input_email, .os3input {
+        width: 90%;
+        margin-bottom: 1%;
+    }
+
+    section {
+        width: 100%;
+        margin-bottom: 2%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+    }
+
+    button {
+        width: 70%;
+        padding: 12px;
+        margin-top: -1%;
+    }
+    .paragrafos {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: left;
+        margin-bottom: -2%;
+        margin-top: -2%;
+    }
+    .label_data_de_nascimento {
+        margin-bottom: 1%;
+        margin-top: -5%;
+    }
+    .os3input {
+        margin-bottom: 3%;
+    }
+}
+
+
